# UseeVTubing

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/useevtubingapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/useevtubingapp/: MainActivity.kt  ModelRenderer.kt
app/src/main/java/com/example/useevtubingapp/screens/: CameraScreen.kt  CharacterScreen.kt  GalleryScreen.kt  WelcomScreen.kt
app/src/main/java/com/example/useevtubingapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/useevtubingapp/utils/: BottomNavItemModel.kt  Constants.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/useevtubingapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
